--- a/views/add-product.html
+++ b/views/add-product.html
@@ -16,7 +16,7 @@
     </header>
 
     <main>
-        <form action="/products" method="POST">
+        <form action="/admin/products" method="POST">
             <input type="text" name="title"/>
             <button type="submit">Add Product</button>
         </form>
