--- a/views/shop.html
+++ b/views/shop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,41 +12,49 @@
             margin: 0;
             font-family: sans-serif;
         }
+
         main {
             padding: 1rem;
         }
+
         .main-header {
             width: 100%;
             height: 3.5rem;
             background-color: #dbc441;
             padding: 0 1.5rem;
         }
+
         .main-header__nav {
             height: 100%;
             display: flex;
             align-items: center;
         }
+
         .main-header__item-list {
             list-style: none;
             margin: 0;
             padding: 0;
             display: flex;
         }
+
         .main-header__item {
             margin: 0 1rem;
             padding: 0;
         }
+
         .main-header__item a {
             text-decoration: none;
-            color: white;
+            color: black;
         }
+
         .main-header__item a:hover,
         .main-header__item a:active,
         .main-header__item a.active {
-            color: #6200ff;
+            color: #3e00a1;
         }
     </style>
 </head>
+
 <body>
     <header class="main-header">
         <nav class="main-header__nav">
@@ -61,4 +70,5 @@
         <p>List of all the products</p>
     </main>
 </body>
+
 </html>
